--- a/src/components/case-studies/Moolroop/MoolroopCard.module.css
+++ b/src/components/case-studies/Moolroop/MoolroopCard.module.css
@@ -14,7 +14,7 @@
   transform: translate(-50%, -50%);
   width: 908px;
   display: flex;
-  align-items: center;
+  align-items: stretch;
   justify-content: space-between;
 }
 
@@ -22,7 +22,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 330px;
+  justify-content: space-between;
   width: 55px;
 }
 
@@ -30,7 +30,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  gap: 186px;
+  justify-content: space-between;
   width: 573px;
 }
 
